--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:gravity="top"
 
-        android:background="@color/popup_gray"
+        android:background="@color/popup_gray_s"
         android:rotation="180"
         android:layout_alignParentStart="true"
         android:layout_weight="0.87">
