--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 
     <item name="fic_yell" type="color">#FFFAF6E0</item>
     <item name="popup_gray" type="color">#88888888</item>
+    <item name="popup_gray_s" type="color">#BAA8A8A8</item>
 
     <integer-array name="androidcolors">
         <item>@color/blue</item>
